fixed z-index problem

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -40,6 +40,7 @@ p {
   border-bottom: 1px solid #CFD8DC;
   position: fixed;
   width: 100%;
+  z-index: 2;
 }
 
 .logo, .kala-title, .profile-name, .logout {
